# TDLOG-2021-ECHECS

./: Enreg_Window.py  HandleFiles.py  Initial_Window.py  Play_Damier.py  Play_Window.py  README.md  damier.cpp  damier.h  module.cpp
Application/: Download_Application_Installer.txt
C++ Codes/: CMakeLists.txt  Information  MANIFEST.in  Not.txt  README.md  piece.h  pyproject.toml  setup.py
C++ Codes/conda.recipe/: meta.yaml
C++ Codes/source/app/: app.cpp
C++ Codes/source/module/: engine.cpp  engine.h
C++ Codes/tests/: test.py
Python Codes/: AI_Level.py  Enreg_Window.py  HandleFiles.py  Initial_Window.py  Play_Damier.py  Play_Window.py  Widget_Color_AI.py  setup.py
Save/: AI_mode_W_UnKnown_TryToWin.txt  PVP_mode_Teo_Antonin_Teo_Antonin_Test_Id2.txt  PVP_mode_Teo_Antonin_Test_Id.txt
Text/: Licence.txt  Playing.txt  Rules.txt  Stockage.txt
source/module/: piece.cpp
